--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ section {
 
 a {
   transition: 0.5s; }
-  a:hover {
+  a:hover, a:focus {
     text-decoration: none; }
 
 h2 {
@@ -290,9 +290,10 @@ footer {
   border: 1px solid #fff;
   border-radius: 5px;
   padding: 20px; }
-  .btn-download:hover {
+  .btn-download:hover, .btn-download:focus {
     color: #3d4451;
-    background: #fff; }
+    background: #fff;
+    outline: none; }
 
 @media (min-width: 768px) {
   section {
