--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -13,9 +13,11 @@ footer {
   border-radius: 5px;
   padding: 20px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: $blackish;
     background: $white;
+    outline: none;
   }
 }
 
