--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -33,7 +33,7 @@ h2 {
   font-weight: 700;
   text-align: center;
   font-size: 36px;
-  color: $blackish;
+  color: $light-black;
 }
 
 .img-responsive {
