--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,6 @@
 $white: #fff;
 $light-grey: #efefef;
-$blackish: #3d4451;
+$light-black: #3d4451;
 $black: #080707;
 $main-blue: #1a77d4;
 $line-grey: #d7d7d7;
