--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,8 +1,11 @@
-nav {
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
   transition: 0.5s;
-}
-
-.navbar-default {
+  align-content: center;
   border: 0;
   background-color: transparent;
   padding: 15px 0;
@@ -21,24 +24,25 @@ nav {
   }
 }
 
-.navbar-default .navbar-nav>li>a,
-.navbar-default .navbar-nav>.active>a {
-  color: $blackish;
+.navbar .navbar-nav>li>a,
+.navbar .navbar-nav>.active>a {
+  text-decoration: none;
+  color: $light-black;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 15px;
   border-bottom: 3px solid transparent;
 }
 
-.navbar-default .navbar-nav>.active>a {
+.navbar .navbar-nav>.active>a {
   border: 0;
   border-bottom: 3px solid $main-blue;
   background: transparent;
 }
 
-.navbar-default .navbar-nav>li>a:hover,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus, {
+.navbar .navbar-nav>li>a:hover,
+.navbar .navbar-nav>.active>a:hover,
+.navbar .navbar-nav>.active>a:focus {
   background: transparent;
   border-bottom: 3px solid $main-blue;
 }
