--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -51,7 +51,7 @@
 
   .date {
     display: block;
-    color: $blackish;
+    color: $light-black;
     font-size: 14px;
     font-weight: 700;
   }
