--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,8 +1,15 @@
 .about {
-  .container {
-    padding-top: 60px;
-    background: $white;
-  }
+  padding-top: 60px;
+  background: $white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.personal-details {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .hello {
@@ -17,9 +24,8 @@
 
 .intro {
   text-align: center;
-  margin-top: 30px;
   color: $black;
-  padding-bottom: 15px;
+  padding: 20px;
   border-bottom: 1px solid $line-grey;
 
   h4,
@@ -29,6 +35,7 @@
 
   h4 {
     font-size: 36px;
+    margin-bottom: 20px;
   }
 
   h5 {
@@ -36,12 +43,15 @@
   }
 }
 
+
 .contact {
   display: table;
   color: $text-grey;
   font-size: 18px;
   margin-top: 32px;
   margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .single-contact {
@@ -54,6 +64,7 @@
   span {
     display: table-cell;
     padding: 0 30px 5px 0;
+    max-width: 150px;
   }
 }
 
@@ -61,6 +72,7 @@
   background: $main-blue;
   text-align: center;
   font-size: 20px;
+  width: 100%;
 
   ul {
     list-style: none;
@@ -75,9 +87,61 @@
 
   a {
     color: $white;
-
     &:hover {
       font-size: 27px;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .about {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .personal-details {
+    width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+    >div {
+      flex: 1 1 0;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .intro {
+    text-align: left;
+    padding: 0 0 20px 0;
+    h4 {
+      margin-bottom: 0;
+    }
+
+  }
+
+  .profile-photo-container {
+    img {
+      margin: 0 auto;
+    }
+  }
+
+  .contact {
+    flex: 1 1 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .single-contact {
+    span {
+      max-width: none;
+    }
+  }
+
+  .social {
+    li {
+      padding: 27px 33px;
     }
   }
 }
