--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -11,9 +11,13 @@ header {
 
   .introduction {
     color: $white;
+    h1 {
+      font-size: 40px;
+    }
 
     h3 {
       font-weight: 300;
+      margin: 30px 0,
     }
 
     a {
@@ -32,5 +36,20 @@ header {
       }
     }
 
+  }
+}
+
+@media (min-width: 768px) {
+  header {
+    .introduction {
+      h1 {
+        font-size: 60px;
+      }
+      h3 {
+        font-size: 48px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+      }
+    }
   }
 }
