--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,10 +1,49 @@
-.nav {
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 50px;
+  padding: 15px 0;
+}
+
+.navbar-toggle {
+  display: flex;
+  background: transparent;
+  flex-direction: column;
+  padding: 9px 10px;
+  border-radius: 4px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  border-color: $line-grey;
+  align-self: flex-end;
+  .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+    background: $text-grey;
+  }
+  & > .icon-bar ~ .icon-bar {
+    margin-top: 4px;
+  }
+}
+
+.navbar-nav-container {
+  transition:max-height 0.3s ease-in-out;
+  max-height: 1px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.navbar-nav {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   padding-left: 0;
-  margin-bottom: 0;
+  margin: 0;
   list-style: none;
-  transition: 0.5s;
+  transition: 0.3s;
   align-content: center;
   border: 0;
   background-color: transparent;
@@ -22,36 +61,91 @@
       background: $text-grey;
     }
   }
+
+  &>li {
+    width: 100%;
+
+    &>a {
+      border-bottom: 3px solid transparent;
+    }
+  }
+
 }
 
-.navbar .navbar-nav>li>a,
-.navbar .navbar-nav>.active>a {
+.navbar-nav-expanded {
+  max-height: 500px;
+}
+
+.navbar-nav>li>a,
+.navbar-nav>.active>a {
+  display: block;
   text-decoration: none;
   color: $light-black;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 3px solid transparent;
+  line-height: 20px;
+  padding: 10px 15px;
 }
 
-.navbar .navbar-nav>.active>a {
+.navbar-nav>.active>a {
   border: 0;
   border-bottom: 3px solid $main-blue;
   background: transparent;
 }
 
-.navbar .navbar-nav>li>a:hover,
-.navbar .navbar-nav>.active>a:hover,
-.navbar .navbar-nav>.active>a:focus {
+.navbar-nav>li>a:hover,
+.navbar-nav>.active>a:hover,
+.navbar-nav>.active>a:focus {
   background: transparent;
   border-bottom: 3px solid $main-blue;
 }
 
 .navbar-fixed-top {
+  position: fixed;
+  width: 100%;
+  top: 0;
   background: $white;
   padding: 5px 20px 5px 0;
+  z-index: 2;
   .navbar-nav>li>a,
   .navbar-nav>.active>a {
     font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-fixed-top + section {
+    padding-top: 61px;
+  }
+  .navbar-toggle {
+    display: none;
+  }
+  .navbar-nav-container {
+    max-height: 500px;
+  }
+  .navbar-nav {
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    padding-left: 20px;
+    padding-right: 20px;
+    &>li {
+      width: auto;
+    }
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .navbar-nav {
+    padding-top: 0;
+    padding-bottom: 0;
+    &>li>a {
+      padding: 15px 20px;
+    }
+  }
+  .navbar-fixed-top {
+    padding: 5px 0;
   }
 }
