--- a/website/sass/_global.scss
+++ b/website/sass/_global.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 
 html,
 body {
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background: $light-grey;
 }
 
@@ -11,8 +11,13 @@ body {
   line-height: 1.42857143;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 h1 {
